--- a/contador_semaforo.html
+++ b/contador_semaforo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./img/nazrin.png" type="image/png">
     <link rel="stylesheet" href="style.css">
-    <title>Home</title>
+    <title>Decrecente e semaforo</title>
 </head>
 <body>
     <header>
